bk_ida/gccida/g3/reg_used_between_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1145:23: error: expected ')'
if ( to_insn == ( rtx)rtwint ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1145:4: note: to match this '('
if ( to_insn == ( rtx)rtwint ) 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1174:43: error: expected ')'
if ( v7 == 34 && ( find_reg_fusage( ( rtx)rtwint, USE, reg) || find_reg_fusage( ( rtx)rtwint, CLOBBER, reg)) ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1174:35: note: to match this '('
if ( v7 == 34 && ( find_reg_fusage( ( rtx)rtwint, USE, reg) || find_reg_fusage( ( rtx)rtwint, CLOBBER, reg)) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1174:87: error: expected ')'
if ( v7 == 34 && ( find_reg_fusage( ( rtx)rtwint, USE, reg) || find_reg_fusage( ( rtx)rtwint, CLOBBER, reg)) ) 
                                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1174:79: note: to match this '('
if ( v7 == 34 && ( find_reg_fusage( ( rtx)rtwint, USE, reg) || find_reg_fusage( ( rtx)rtwint, CLOBBER, reg)) ) 
                                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1178:23: error: expected ')'
if ( to_insn == ( rtx)rtwint ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1178:4: note: to match this '('
if ( to_insn == ( rtx)rtwint ) 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1212:41: error: expected expression
v15 = reg_mentioned_p_0( rtx, *( ( rtx *)rtwint + 4)); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/rtlanal.c:1230:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v26) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_used_between_p/src/obj/rtlanal.o] Error 1
